engine/baml-runtime/tests/viz-runtime/snapshots/viz_runtime__viz_runtime__fiddle_demo2@fiddle_demo2.baml.snap
---
source: baml-runtime/tests/viz-runtime.rs
expression: "&snapshot"
input_file: baml-runtime/tests/viz-runtime/testdata/fiddle_demo2.baml
---
fixture: fiddle_demo2.baml
snapshots:
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: Main
        header_level: ~
    stack_after:
      - "Main|root:0"
    emitted_events:
      - node_id: 0
        log_filter_key: "Main|root:0"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: MyFunction5
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
    emitted_events:
      - node_id: 0
        log_filter_key: "MyFunction5|root:0"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 1
        node_type: header_context_enter
        path_segment:
          kind: header
          slug: check
          ordinal: 0
        label: Check
        header_level: 1
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:check:0"
    emitted_events:
      - node_id: 1
        log_filter_key: "MyFunction5|root:0|hdr:check:0"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 2
        node_type: branch_group
        path_segment:
          kind: branch_group
          slug: if-flag
          ordinal: 0
        label: if (flag)
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:check:0"
      - "MyFunction5|root:0|hdr:check:0|bg:if-flag:0"
    emitted_events:
      - node_id: 2
        log_filter_key: "MyFunction5|root:0|hdr:check:0|bg:if-flag:0"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 3
        node_type: branch_arm
        path_segment:
          kind: branch_arm
          slug: if-flag
          ordinal: 0
        label: if (flag)
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:check:0"
      - "MyFunction5|root:0|hdr:check:0|bg:if-flag:0"
      - "MyFunction5|root:0|hdr:check:0|bg:if-flag:0|arm:if-flag:0"
    emitted_events:
      - node_id: 3
        log_filter_key: "MyFunction5|root:0|hdr:check:0|bg:if-flag:0|arm:if-flag:0"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 4
        node_type: branch_arm
        path_segment:
          kind: branch_arm
          slug: else
          ordinal: 1
        label: else
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:check:0"
      - "MyFunction5|root:0|hdr:check:0|bg:if-flag:0"
      - "MyFunction5|root:0|hdr:check:0|bg:if-flag:0|arm:if-flag:0"
      - "MyFunction5|root:0|hdr:check:0|bg:if-flag:0|arm:if-flag:0|arm:else:1"
    emitted_events:
      - node_id: 4
        log_filter_key: "MyFunction5|root:0|hdr:check:0|bg:if-flag:0|arm:if-flag:0|arm:else:1"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: exit
        node_id: 4
        node_type: branch_arm
        path_segment:
          kind: branch_arm
          slug: else
          ordinal: 1
        label: else
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:check:0"
      - "MyFunction5|root:0|hdr:check:0|bg:if-flag:0"
      - "MyFunction5|root:0|hdr:check:0|bg:if-flag:0|arm:if-flag:0"
    emitted_events:
      - node_id: 4
        log_filter_key: "MyFunction5|root:0|hdr:check:0|bg:if-flag:0|arm:if-flag:0|arm:else:1"
        new_state: completed
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: exit
        node_id: 3
        node_type: branch_arm
        path_segment:
          kind: branch_arm
          slug: if-flag
          ordinal: 0
        label: if (flag)
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:check:0"
      - "MyFunction5|root:0|hdr:check:0|bg:if-flag:0"
    emitted_events:
      - node_id: 3
        log_filter_key: "MyFunction5|root:0|hdr:check:0|bg:if-flag:0|arm:if-flag:0"
        new_state: completed
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: exit
        node_id: 2
        node_type: branch_group
        path_segment:
          kind: branch_group
          slug: if-flag
          ordinal: 0
        label: if (flag)
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:check:0"
    emitted_events:
      - node_id: 2
        log_filter_key: "MyFunction5|root:0|hdr:check:0|bg:if-flag:0"
        new_state: completed
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 7
        node_type: header_context_enter
        path_segment:
          kind: header
          slug: extract3
          ordinal: 3
        label: Extract3
        header_level: 1
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract3:3"
    emitted_events:
      - node_id: 1
        log_filter_key: "MyFunction5|root:0|hdr:check:0"
        new_state: completed
      - node_id: 7
        log_filter_key: "MyFunction5|root:0|hdr:extract3:3"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: LlmEcho
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract3:3"
      - "LlmEcho|root:0"
    emitted_events:
      - node_id: 0
        log_filter_key: "LlmEcho|root:0"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: exit
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: LlmEcho
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract3:3"
    emitted_events:
      - node_id: 0
        log_filter_key: "LlmEcho|root:0"
        new_state: completed
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 8
        node_type: header_context_enter
        path_segment:
          kind: header
          slug: extract4
          ordinal: 4
        label: Extract4
        header_level: 1
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract4:4"
    emitted_events:
      - node_id: 7
        log_filter_key: "MyFunction5|root:0|hdr:extract3:3"
        new_state: completed
      - node_id: 8
        log_filter_key: "MyFunction5|root:0|hdr:extract4:4"
        new_state: running
  - watch_event:
      kind: other
      header: ~
      viz_event: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract4:4"
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: LlmEcho
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract4:4"
      - "LlmEcho|root:0"
    emitted_events:
      - node_id: 0
        log_filter_key: "LlmEcho|root:0"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: exit
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: LlmEcho
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract4:4"
    emitted_events:
      - node_id: 0
        log_filter_key: "LlmEcho|root:0"
        new_state: completed
  - watch_event:
      kind: other
      header: ~
      viz_event: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract4:4"
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: LlmEcho
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract4:4"
      - "LlmEcho|root:0"
    emitted_events:
      - node_id: 0
        log_filter_key: "LlmEcho|root:0"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: exit
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: LlmEcho
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract4:4"
    emitted_events:
      - node_id: 0
        log_filter_key: "LlmEcho|root:0"
        new_state: completed
  - watch_event:
      kind: other
      header: ~
      viz_event: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract4:4"
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: enter
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: LlmEcho
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract4:4"
      - "LlmEcho|root:0"
    emitted_events:
      - node_id: 0
        log_filter_key: "LlmEcho|root:0"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: exit
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: LlmEcho
        header_level: ~
    stack_after:
      - "Main|root:0"
      - "MyFunction5|root:0"
      - "MyFunction5|root:0|hdr:extract4:4"
    emitted_events:
      - node_id: 0
        log_filter_key: "LlmEcho|root:0"
        new_state: completed
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: exit
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: MyFunction5
        header_level: ~
    stack_after:
      - "Main|root:0"
    emitted_events:
      - node_id: 8
        log_filter_key: "MyFunction5|root:0|hdr:extract4:4"
        new_state: completed
      - node_id: 0
        log_filter_key: "MyFunction5|root:0"
        new_state: completed
  - watch_event:
      kind: viz_exec_state
      header: ~
      viz_event:
        event: exit
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        label: Main
        header_level: ~
    stack_after: []
    emitted_events:
      - node_id: 0
        log_filter_key: "Main|root:0"
        new_state: completed
