engine/baml-runtime/tests/viz-runtime/snapshots/viz_runtime__viz_runtime__simple_if_else@simple_if_else.baml.snap
---
source: baml-runtime/tests/viz-runtime.rs
expression: "&snapshot"
input_file: baml-runtime/tests/viz-runtime/testdata/simple_if_else.baml
---
fixture: simple_if_else.baml
snapshots:
  - watch_event:
      kind: viz_exec_state
      function: Main
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: function_root
        lexical_id: ""
        label: Main
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction4
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: function_root
        lexical_id: ""
        label: MyFunction4
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: header
      function: MyFunction4
      variable: ~
      channel: ~
      stream_id: ~
      header:
        level: 1
        title: Check
      viz_event: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction4
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: header_context_enter
        lexical_id: ""
        label: Check
        header_level: 1
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction4
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: branch_group
        lexical_id: ""
        label: if (flag)
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction4
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: branch_arm
        lexical_id: ""
        label: if (flag)
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction4
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: branch_arm
        lexical_id: ""
        label: else
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction4
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: exit
        node_type: branch_arm
        lexical_id: ""
        label: else
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction4
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: exit
        node_type: branch_arm
        lexical_id: ""
        label: if (flag)
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction4
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: exit
        node_type: function_root
        lexical_id: ""
        label: MyFunction4
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: Main
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: exit
        node_type: function_root
        lexical_id: ""
        label: Main
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
