engine/baml-runtime/tests/viz-runtime/snapshots/viz_runtime__viz_runtime__simple_loop@simple_loop.baml.snap
---
source: baml-runtime/tests/viz-runtime.rs
expression: "&snapshot"
input_file: baml-runtime/tests/viz-runtime/testdata/simple_loop.baml
---
fixture: simple_loop.baml
snapshots:
  - watch_event:
      kind: viz_exec_state
      function: Main
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: function_root
        lexical_id: ""
        label: Main
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: function_root
        lexical_id: ""
        label: MyFunction1
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: header
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      header:
        level: 1
        title: Loop
      viz_event: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: header_context_enter
        lexical_id: ""
        label: Loop
        header_level: 1
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: loop
        lexical_id: ""
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: value
      function: MyFunction1
      variable: acc
      channel: acc
      stream_id: ~
      header: ~
      viz_event: ~
      value: a
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: exit
        node_type: loop
        lexical_id: ""
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: loop
        lexical_id: ""
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: value
      function: MyFunction1
      variable: acc
      channel: acc
      stream_id: ~
      header: ~
      viz_event: ~
      value: ab
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: exit
        node_type: loop
        lexical_id: ""
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: enter
        node_type: loop
        lexical_id: ""
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: value
      function: MyFunction1
      variable: acc
      channel: acc
      stream_id: ~
      header: ~
      viz_event: ~
      value: abc
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: exit
        node_type: loop
        lexical_id: ""
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: exit
        node_type: function_root
        lexical_id: ""
        label: MyFunction1
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: Main
      variable: ~
      channel: ~
      stream_id: ~
      header: ~
      viz_event:
        event: exit
        node_type: function_root
        lexical_id: ""
        label: Main
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events: []
